# BirdsEye

./: .gitignore  .gitmodules  README.md  claude_instructions.md  concerns.md  prepare_dataset.py  process.sh  pyproject.toml  run.sh  setup.sh
datasets/: __init__.py
datasets/openhumanvid/: __init__.py
datasets/pexels/: __init__.py
datasets/ultravideo/: __init__.py
datasets/web360/: __init__.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/components/: DetailPanel.svelte  ExportModal.svelte  FilterPanel.svelte  ReloadIndicator.svelte  SearchHeader.svelte  StatsPanel.svelte  StatusBar.svelte  SyntaxHelp.svelte  VideoCard.svelte  VideoGrid.svelte
frontend/src/components/preview/: PreviewSection.svelte  SectionRenderer.svelte  SideBySideImages.svelte  SideBySideVideos.svelte  SingleImage.svelte  SingleVideo.svelte
frontend/src/components/stats/: DataSourceSelector.svelte  ScatterplotMatrix.svelte  WordFrequency.svelte
frontend/src/components/widgets/: ConfirmModal.svelte  DownloadButton.svelte  FieldBar.svelte  HistogramFilter.svelte  ModeTabRow.svelte  Popover.svelte  SafeImage.svelte  TernaryFilter.svelte
frontend/src/lib/: api.js  canvas.js  fields.js  format.js  sort.js  stats.js  stores.js  url.js
preprocess/: aggregator.py  distill_metadata.py  process_all.py  video_utils.py
preprocess/processors/: __init__.py  base.py  clip.py  compress.py  gve.py  ingest.py  phash.py  raft_flow.py  siglip.py
server/: app.py  clip_encoder.py  search.py  status.py
tests/: bench_gpu_subprocess.py  bench_pyav_ingest.py  benchmark_ingest.py  compress_ladder.py  conftest.py  profile_ingest.py  test_gve_processor.py  test_multi_embedding.py  test_pure_functions.py  test_server_endpoints.py  test_siglip_processor.py  test_triple_embedding.py
tests/_archive/: bench_gpu_decode.py  cpu_usage.npy
