[project]
name = "searchable-pexels"
version = "0.1.0"
description = "Search through video datasets by caption (fuzzy) and visual similarity (CLIP)"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "fire>=0.5",
    "numpy>=1.24",
    "Pillow>=10.0",
    "transformers>=4.36",
    "torch>=2.0",
    "faiss-cpu>=1.7",
    "tqdm>=4.65",
    "rp",
    "opencv-contrib-python>=4.8",
    "imagehash>=4.3",
    "av>=16.1.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20",
    "requests>=2.32.5",
    "torchvision>=0.25.0",
    "easydict>=1.13",
    "einops>=0.8.2",
    "scikit-learn>=1.7.2",
    "scikit-image>=0.25.2",
    "py3nvml>=0.2.7",
    "qwen-vl-utils>=0.0.8",
    "accelerate>=0.26",
]

[tool.hatch.build.targets.wheel]
packages = ["server", "preprocess"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
